lib/src/g/gapi.g.dart


@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, CvSize, ffi.Double, ffi.Double,
        ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_gaussianBlur(
  GMat src,
  CvSize ksize,
  double sigmaX,
  double sigmaY,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Double, ffi.Double, Mat,
        ffi.Int, ffi.Bool, ffi.Double)>()
external ffi.Pointer<CvStatus> gapi_goodFeaturesToTrack(
  GMat image,
  int maxCorners,
  double qualityLevel,
  double minDistance,
  Mat mask,
  int blockSize,
  bool useHarrisDetector,
  double k,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_mask(
  GMat src,
  GMat mask,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GScalar>)>()
external ffi.Pointer<CvStatus> gapi_mean(
  GMat src,
  ffi.Pointer<GScalar> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_medianBlur(
  GMat src,
  int ksize,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, GMat, GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_merge3(
  GMat src1,
  GMat src2,
  GMat src3,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, GMat, GMat, GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_merge4(
  GMat src1,
  GMat src2,
  GMat src3,
  GMat src4,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, Mat, CvPoint, ffi.Int,
        ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_morphologyEx(
  GMat src,
  int op,
  Mat kernel,
  CvPoint anchor,
  int iterations,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, GMat, ffi.Double, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_mul(
  GMat src1,
  GMat src2,
  double scale,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, GScalar, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_mulC(
  GMat src,
  GScalar multiplier,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, ffi.Double, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_mulC_1(
  GMat src,
  double multiplier,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GScalar, GMat, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_mulC_2(
  GScalar multiplier,
  GMat src,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, ffi.Double, ffi.Double, ffi.Int, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_normalize(
  GMat src,
  double alpha,
  double beta,
  int norm_type,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Bool, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_phase(
  GMat x,
  GMat y,
  bool angleInDegrees,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Bool, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_polarToCart(
  GMat magnitude,
  GMat angle,
  bool angleInDegrees,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, Mat, Mat, ffi.Int, ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_remap(
  GMat src,
  Mat map1,
  Mat map2,
  int interpolation,
  int borderMode,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, CvSize, ffi.Double, ffi.Double, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_resize(
  GMat src,
  CvSize dsize,
  double fx,
  double fy,
  int interpolation,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, CvSize, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_resizeP(
  GMat src,
  CvSize dsize,
  int interpolation,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, Mat, Mat, CvPoint, Scalar,
        ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_sepFilter(
  GMat src,
  int ddepth,
  Mat kernelX,
  Mat kernelY,
  CvPoint anchor,
  Scalar delta,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, ffi.Pointer<GMat>, ffi.Pointer<GMat>, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_split3(
  GMat src,
  ffi.Pointer<GMat> rval,
  ffi.Pointer<GMat> rval1,
  ffi.Pointer<GMat> rval2,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>, ffi.Pointer<GMat>,
        ffi.Pointer<GMat>, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_split4(
  GMat src,
  ffi.Pointer<GMat> rval,
  ffi.Pointer<GMat> rval1,
  ffi.Pointer<GMat> rval2,
  ffi.Pointer<GMat> rval3,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_sqrt(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_sub(
  GMat src1,
  GMat src2,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, GScalar, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_subC(
  GMat src,
  GScalar c,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GScalar, GMat, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_subRC(
  GScalar c,
  GMat src,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, Mat, CvSize, ffi.Int, ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_warpAffine(
  GMat src,
  Mat M,
  CvSize dsize,
  int flags,
  int borderMode,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, Mat, CvSize, ffi.Int, ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_warpPerspective(
  GMat src,
  Mat M,
  CvSize dsize,
  int flags,
  int borderMode,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

const addresses = _SymbolAddresses();

class _SymbolAddresses {
  const _SymbolAddresses();
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(VecPrimPtr)>>
      get VecPrim_Close => ffi.Native.addressOf(self.VecPrim_Close);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(GComputationPtr)>>
      get gapi_GComputation_Close =>
          ffi.Native.addressOf(self.gapi_GComputation_Close);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(GMatPtr)>>
      get gapi_GMat_Close => ffi.Native.addressOf(self.gapi_GMat_Close);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(GScalarPtr)>>
      get gapi_GScalar_Close => ffi.Native.addressOf(self.gapi_GScalar_Close);
}

typedef CvPoint = imp$1.CvPoint;
typedef CvRect = imp$1.CvRect;
typedef CvSize = imp$1.CvSize;
typedef CvStatus = imp$1.CvStatus;

final class GArrayGArrayPoint extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayGArrayPointPtr = ffi.Pointer<GArrayGArrayPoint>;

final class GArrayPoint extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

final class GArrayPoint2d extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint2dPtr = ffi.Pointer<GArrayPoint2d>;

final class GArrayPoint2f extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint2fPtr = ffi.Pointer<GArrayPoint2f>;

final class GArrayPoint2i extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint2iPtr = ffi.Pointer<GArrayPoint2i>;

final class GArrayPoint3d extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint3dPtr = ffi.Pointer<GArrayPoint3d>;

final class GArrayPoint3f extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint3fPtr = ffi.Pointer<GArrayPoint3f>;

final class GArrayPoint3i extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint3iPtr = ffi.Pointer<GArrayPoint3i>;
typedef GArrayPointPtr = ffi.Pointer<GArrayPoint>;

final class GArrayPrim extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPrimPtr = ffi.Pointer<GArrayPrim>;

final class GArrayVec4i extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayVec4iPtr = ffi.Pointer<GArrayVec4i>;

final class GComputation extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GComputationPtr = ffi.Pointer<GComputation>;

final class GFrame extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GFramePtr = ffi.Pointer<GFrame>;

final class GMat extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GMatPtr = ffi.Pointer<GMat>;

final class GOpaquePoint extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GOpaquePointPtr = ffi.Pointer<GOpaquePoint>;

final class GOpaqueRect extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GOpaqueRectPtr = ffi.Pointer<GOpaqueRect>;

final class GOpaqueVec4f extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GOpaqueVec4fPtr = ffi.Pointer<GOpaqueVec4f>;

final class GOpaqueVec6f extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GOpaqueVec6fPtr = ffi.Pointer<GOpaqueVec6f>;

final class GScalar extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GScalarPtr = ffi.Pointer<GScalar>;
typedef Mat = imp$1.Mat;

final class Prim extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef PrimPtr = ffi.Pointer<Prim>;
typedef Prims = VecPrim;
typedef Scalar = imp$1.Scalar;

final class VecGMat extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef VecGMatPtr = ffi.Pointer<VecGMat>;
typedef VecPoint = imp$1.VecPoint;

final class VecPrim extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef VecPrimPtr = ffi.Pointer<VecPrim>;
typedef VecVec4i = imp$1.VecVec4i;
typedef VecVecPoint = imp$1.VecVecPoint;
